#25 Fix: Icons not showing if the font is not installed on user's device

--- a/style/components/sidebar.css
+++ b/style/components/sidebar.css
@@ -33,10 +33,6 @@
   color: var(--color-black);
 }
 
-.sidebar-navigation .icon {
-  font-size: 1.25rem;
-}
-
 .sidebar .divider {
   padding-top: 0;
   padding-bottom: 0;
@@ -61,6 +57,7 @@
 }
 
 .projects-navigation .add-project {
+  --Iconsax-Size: 0.9rem;
   all: unset;
   cursor: pointer;
 }
